WELD-2744 Change how we create ClassFile instances to avoid instantiating DefaultClassFactory.INSTANCE